# fastelavns-tonde

./: .gitignore  README.md
backend/: pyproject.toml
frontend/: package.json  tsconfig.json  webpack.config.ts
frontend/src/: index.tsx  tsconfig.json
frontend/static/: index.html
