[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for fastelavn"
authors = ["Valdemar Grange, Jonas Bamse Andersen"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
